fix:  overflow contents

--- a/css/style.css
+++ b/css/style.css
@@ -194,10 +194,12 @@ body {
 
 .header-features-item{
     width: 18.5625rem;
-    min-height: 100%;
+    height: auto;
     padding: 1.875rem 3.125rem;
     border: 1px solid rgba(235, 235, 240, 0.2);
 }
+
+
 
 .slider-buttons {
     display: none;
